--- a/css/style.css
+++ b/css/style.css
@@ -39,58 +39,288 @@ div, header, footer, aside, section {
 /* COLORS
 MENU : #729fcf;
 CONTOURS ET TITRES : #64B5F6
+HR : #BBDEFB;
 TEXTE SECONDAIRE : #808080; */
 
+/* GLOBAL */
+hr {
+	border-top: 0.2px solid #BBDEFB !important;
+	width: 1200px;
+}
+
+h2 {
+	font-family: Raleway !important;
+	color: #729fcf !important;
+	text-align: center;
+	margin: 20px 20px 20px 20px !important;
+	font-size: 3em !important;
+}
+
+div::after {
+	content: "";
+	display: block;
+	clear: both;
+}
+
 /* HEADER */
-.headerpic {
+.mainpic {
 	height: 100vh;
-	background-image:url(img/header.jpg);
+	background-image: url("../img/neo3.jpg");
+	background-repeat: no-repeat;
 	background-position: center center;
 }
 
 .name {
+	display: block;
 	font-family: Ubuntu;
+	color: white;
+	text-align: center;
+	padding-top: 120px;
+	font-size: 6em;
 }
 
 .undertitle {
+	display: block;
+	text-align: center;
+	margin-top: 170px;
 	font-family: Ubuntu;
+	color: white;
+	font-size: 3em;
+}
+
+.fleche {
+	display: block;
+	text-align: center;
+	margin-top: 60px;
 }
 
 /* MENU HEADER */
 nav {
 	background-color: #729fcf;
 	text-decoration: none;
-	display: inline;
+	height: 50px;
 }
 
-nav>ul>li {
-	font-family: Raleway;
-	display: inline;
+ul {
+  text-align: justify;
+  list-style: none;
+  list-style-image: none;
+  margin: 0;
+  padding-top: 10px;
+	margin-left: 200px;
+	margin-right: 200px;
+	font-size: 22px;
 }
-
-/* TITRE DE CATEGORIES */
-h2 {
-	font-family: Raleway;
+ul:after {
+  content: "";
+  margin-left: 100%;
+}
+li {
+  display: inline;
+	text-transform: uppercase;
+}
+#mainmenu {
+	color: white !important;
+  display: inline-block;
+	text-decoration: none !important;
 }
 
 /* PRESENTATION */
+.presentation {
+	margin-top: 60px;
+	margin-left: 140px;
+	padding-bottom: 50px;
+}
+
+.picture {
+	float: left;
+}
+
+.descrip {
+	margin-left: 100px;
+	width: 400px;
+	float: left;
+	text-align: justify;
+	font-family: Roboto;
+	font-size: 19px;
+}
+
+.centreinteret {
+	width: 300px;
+	float: left;
+	margin-left: 100px;
+}
+
+.interest {
+	font-size: 20px;
+}
+
+.imginterest {
+	margin-top: 8px;
+	margin-left: 11px;
+}
+
 
 
 /* COMPETENCES */
+.fa {
+	transform: scale(2.2, 2.2);
+}
 .fa-code {
-	color: #64B5F6;
+	color: #729fcf;
+	margin-left: 115px;
+	padding-bottom: 18px;
 }
 .fa-pencil-square-o {
-	color: #64B5F6;
+	color: #729fcf;
+	margin-left: 115px;
+	padding-bottom: 18px;
 }
 .fa-language {
-	color: #64B5F6;
+	color: #729fcf;
+	margin-left: 115px;
+	padding-bottom: 18px;
 }
 
+.competences {
+	margin-top: 60px;
+	padding-bottom: 40px;
+	font-family: Roboto;
+}
+
+.code {
+	float: left;
+	width: 250px;
+	margin-left: 17.5%;
+	margin-top: 40px;
+	text-align: justify;
+	font-size: 20px;
+}
+
+.design {
+	margin-left: 80px;
+	float: left;
+	width: 250px;
+	margin-top: 40px;
+	text-align: justify;
+	font-size: 20px;
+}
+
+.language {
+	margin-left: 80px;
+	float: left;
+	width: 250px;
+	margin-top: 40px;
+	text-align: justify;
+	font-size: 20px;
+}
 /* PORTFOLIO */
+.portfolio {
+	margin-top: 60px;
+	padding-bottom: 40px;
+}
 
 /* PARCOURS */
+.parcours {
+	margin-top: 60px;
+	padding-bottom: 40px;
+	font-family: Roboto;
+}
+
+.date {
+	float: left;
+	margin-left: 13.5%;
+	display: block;
+	margin-top: 40px;
+	text-align: center;
+}
+
+.duree {
+	display: block;
+	font-size: 23px;
+}
+
+.details_lycee {
+	display: block;
+	color: #808080;
+	text-align: center;
+	margin-top: -18px;
+	padding-bottom: 19%;
+}
+
+.details {
+	display: block;
+	color: #808080;
+	font-size: 16px;
+	padding-bottom: 4%;
+}
+
+.etude {
+	font-size: 23px;
+}
+
+.div_etudes {
+	float: left;
+	width: 549px;
+	margin-left: 230px;
+	margin-top: 40px;
+}
 
 /* FORMULAIRE */
 
+form {
+	 max-width:420px;
+	 margin:50px auto;
+	 margin-left: 13%;
+}
+
+.feedback-input {
+  color:white;
+  font-family: Ubuntu;
+  font-weight:500;
+  font-size: 18px;
+  border-radius: 5px;
+  line-height: 22px;
+  background-color: transparent;
+  border:2px solid #BBDEFB;
+  transition: all 0.3s;
+  padding: 13px;
+  margin-bottom: 15px;
+  width:100%;
+  box-sizing: border-box;
+  outline:0;
+}
+
+.feedback-input:focus { border:2px solid #BBDEFB; }
+
+textarea {
+  height: 150px;
+  line-height: 150%;
+  resize:vertical;
+}
+
+[type="submit"] {
+  font-family: Lato;
+  width: 100%;
+  background: #64B5F6;
+  border-radius:5px;
+  border:0;
+  cursor:pointer;
+  color:white;
+  font-size:24px;
+  padding-top:10px;
+  padding-bottom:10px;
+  transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+[type="submit"]:hover { background: #90CAF9; }
+
 /* INFOS PERSO */
+.infosperso {
+	
+}
+
+.mail .phone .twitter {
+
+}
