--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@ HR : #BBDEFB;
 TEXTE SECONDAIRE : #808080; */
 
 /* GLOBAL */
+html {
+	scroll-behavior: smooth;
+}
 hr {
 	border-top: 0.2px solid #BBDEFB !important;
 	width: 1200px;
@@ -90,15 +93,40 @@ div::after {
 
 .fleche {
 	display: block;
-	text-align: center;
-	margin-top: 60px;
+	margin: auto;
+	margin-top: 55px;
 }
+
+/*sticky*/
+.fixed {
+	  position: fixed;
+    top: 0;
+}
+
+/* Animation du lien */
+.header_nav a:after {
+	content: "";
+	position: absolute;
+	/* Préparation de notre animation */
+	opacity: 0;
+	transform: translateY(5px);
+	transition: all .4s;
+}
+/* Le trait va remonter et apparaitre */
+.header_nav a:hover:after,
+.header_nav a:focus:after {
+	opacity: .6;
+	transform: translateY(0);
+}
+
+
 
 /* MENU HEADER */
 nav {
 	background-color: #729fcf;
 	text-decoration: none;
 	height: 50px;
+	z-index: 100;
 }
 
 ul {
@@ -106,7 +134,7 @@ ul {
   list-style: none;
   list-style-image: none;
   margin: 0;
-  padding-top: 10px;
+	line-height: 50px;
 	margin-left: 200px;
 	margin-right: 200px;
 	font-size: 22px;
@@ -183,7 +211,7 @@ li {
 }
 
 .competences {
-	margin-top: 60px;
+	margin-top: 53px;
 	padding-bottom: 40px;
 	font-family: Roboto;
 }
@@ -214,10 +242,80 @@ li {
 	text-align: justify;
 	font-size: 20px;
 }
+
 /* PORTFOLIO */
 .portfolio {
 	margin-top: 60px;
 	padding-bottom: 40px;
+}
+
+.thumbnail-grid {
+	user-select: none
+}
+.thumbnail-grid figure {
+	position: relative;
+	width: 300px;
+	height: 200px;
+	margin: 10px;
+	border-radius: 3px;
+	box-shadow: inset 0 -40px 0 0 rgba(0,0,0,.4);
+	transition: all .2s ease-in-out
+}
+.thumbnail-grid figure:hover {
+	box-shadow: inset 0 -200px 0 0 rgba(0,0,0,.7)
+}
+.thumbnail-grid figcaption {
+	position: absolute;
+	width: 100%;
+	font-weight: 300;
+	text-align: center;
+	color: #f4f4f4;
+	text-shadow: 0 0 4px #000;
+	bottom: 10px;
+	transition: all .2s ease-in-out
+}
+.thumbnail-grid figure:hover figcaption {
+	bottom: 80px;
+	font-family: Roboto;
+	font-size: 1.5em;
+}
+.flex {
+	margin-top: 40px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: stretch;
+	align-content: stretch
+}
+
+
+/* MINIATURE */
+.thumbnail-grid figure.i1 {
+	margin-left: 90px;
+	background: url(../img/portfolio/bulles.png) no-repeat center;
+	background-size: cover
+}
+.thumbnail-grid figure.i2 {
+	background: url(../img/portfolio/appliphp.jpg) no-repeat center;
+	background-size: cover
+}
+.thumbnail-grid figure.i3 {
+	background: url(../img/portfolio/miniaturefilm.JPG) no-repeat center;
+	background-size: cover
+}
+.thumbnail-grid figure.i4 {
+	margin-left: 90px;
+	background: url(../img/portfolio/logo.png) no-repeat center;
+	background-size: cover
+}
+.thumbnail-grid figure.i5 {
+	background: url(../img/portfolio/pictosbureau.jpg) no-repeat center;
+	background-size: cover
+}
+.thumbnail-grid figure.i6 {
+	background: url(../img/portfolio/pictosgarage.png) no-repeat center;
+	background-size: cover
 }
 
 /* PARCOURS */
@@ -268,14 +366,17 @@ li {
 
 /* FORMULAIRE */
 
+.formulaire {
+	margin-top: 60px;
+}
 form {
+	float: left;
 	 max-width:420px;
 	 margin:50px auto;
-	 margin-left: 13%;
+	 margin-left: 16.5%;
 }
 
 .feedback-input {
-  color:white;
   font-family: Ubuntu;
   font-weight:500;
   font-size: 18px;
@@ -300,7 +401,7 @@ textarea {
 }
 
 [type="submit"] {
-  font-family: Lato;
+  font-family: Ubuntu;
   width: 100%;
   background: #64B5F6;
   border-radius:5px;
@@ -312,15 +413,51 @@ textarea {
   padding-bottom:10px;
   transition: all 0.3s;
   margin-top:-4px;
-  font-weight:700;
+  font-weight:900;
 }
 [type="submit"]:hover { background: #90CAF9; }
 
 /* INFOS PERSO */
 .infosperso {
-	
+	float: left;
+	width: 300px;
+	margin-left: 100px;
+	margin-top: 3.8%;
 }
 
-.mail .phone .twitter {
+.phone, .twitter, .dlcv {
+	margin-top: 40px;
+}
 
+.personnal {
+	margin-left: 25px;
+	font-family: Roboto;
+	font-size: 1.2em;
+}
+
+.fa-mobile  {
+	transform: scale(3.6, 3.6);
+	margin-left: 4px;
+}
+
+.dlcv {
+	margin-top: 20px;
+	text-decoration: none;
+}
+
+/* FOOTER  */
+footer {
+	background-color: #808080;
+	height: 3em;
+	font-size: 1.2em;
+	color: white;
+	font-family: Roboto;
+}
+
+#rights {
+	display: table;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: auto;
+	line-height: 3em;
 }
