Revert "jQuery scroll + Download des CV Papiers + footer"
This reverts commit 08de9082b228bf506b0e6ee609f80d3c543b6d6d.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3118,8 +3118,8 @@ fieldset[disabled] .btn-default.focus {
 }
 .btn-primary {
   color: #fff;
-  background-color: #729fcf;
-  border-color: #729fcf;
+  background-color: #337ab7;
+  border-color: #2e6da4;
 }
 .btn-primary:focus,
 .btn-primary.focus {
@@ -3136,8 +3136,8 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
   color: #fff;
-  background-color: #64B5F6;
-  border-color: #64B5F6;
+  background-color: #286090;
+  border-color: #204d74;
 }
 .btn-primary:active:hover,
 .btn-primary.active:hover,
