--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ html {
 	hr {
 		width: 640px !important;
 	}
+	.mainpic {
+		background-image: url("../img/neo3_tablette.jpg") !important;
+	}
 }
 
 hr {
@@ -192,6 +195,13 @@ li {
 	text-decoration: none !important;
 }
 
+@media (max-width: 800px) {
+	ul {
+		margin-left: 50px;
+		margin-right: 50px;
+	}
+}
+
 /* PRESENTATION */
 .presentation {
 	margin-top: 60px;
@@ -203,8 +213,12 @@ li {
 	float: left;
 }
 
+.romain {
+	padding-top: 6px;
+}
+
 .descrip {
-	margin-left: 100px;
+	margin-left: 95px;
 	width: 400px;
 	float: left;
 	text-align: justify;
@@ -231,6 +245,7 @@ li {
 @media (max-width: 800px) {
 	.picture {
 		width: 542px;
+		margin-left: -25px;
 	}
 	.romain {
 		display: block;
@@ -239,7 +254,7 @@ li {
 	.descrip {
 		text-align: justify;
 		margin-top: 32px;
-		margin-left: 50px;
+		margin-left: 44px;
 		font-size: 21px;
 	}
 	.centreinteret {
@@ -387,23 +402,27 @@ li {
 	 background-size: cover
 	}
 	.thumbnail-grid figure.i3 {
-		float: left;
 		margin-top: 30px;
 		margin-left: -90px;
 		background: url(../img/portfolio/miniaturefilm.JPG) no-repeat center;
 		background-size: cover
 	}
 	.thumbnail-grid figure.i5 {
-		float: right;
-		margin-left: -90px;
+		margin-left: -20px;
 		margin-top: -240px;
 		background: url(../img/portfolio/pictosbureau.jpg) no-repeat center;
 		background-size: cover
 	}
 	.thumbnail-grid figure.i4 {
 		margin-top: 30px;
-		margin-left: -22px;
+		margin-left: 0px;
 		background: url(../img/portfolio/logo.png) no-repeat center;
+		background-size: cover
+	}
+	.thumbnail-grid figure.i6 {
+		margin-top: -200px;
+		margin-left: 400px;
+		background: url(../img/portfolio/pictosgarage.png) no-repeat center;
 		background-size: cover
 	}
 }
